fix: overflow when settings menu open

--- a/apps/web/src/theme/styles/globals.css
+++ b/apps/web/src/theme/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.overlay-visible {
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.overlay-visible #__next {
+  height: 100vh;
+  overflow: hidden;
+}
